--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,46 @@
 </head>
 <body>
 
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href="#">
+          <img src="images/logo.png" alt="logo" class="logo__img">
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">SHOP</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">PAGE</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">BLOG</a>
+            </li>
+            <li class="menu__list-item ">
+              <a class="menu__list-link" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-nav">
+          <a class="user-nav__link" href="#"><img class="usernav__link-img" src="images/icons/num_1.png" alt="user btn"></a>
+          <a class="user-nav__link" href="#"><img class="usernav__link-img" src="images/icons/num_2.png" alt="user btn"></a>
+          <a class="user-nav__link" href="#">
+            <img class="usernav__link-img" src="images/icons/num_3.png" alt="user btn">
+            <span class="user-nav__num">3</span>
+          </a>
+          <a class="user-nav__link" href="#">
+            <img class="usernav__link-img" src="images/icons/num_4.png" alt="user btn">
+            <span class="user-nav__num">7</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
 
 
   <script src="js/main.min.js"></script>
