--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,95 @@
       </div>
     </section>
 
+    <section class="categories-info">
+      <div class="container">
+        <div class="info">
+          <div class="info__item">
+            <img class="info__item-icon" src="images/icons/delivery.png" alt="delivery icon">
+            <h5 class="info__item-title">
+              Free Shipping Order $100
+            </h5>
+            <p class="info__item-text">
+              Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+            </p>
+          </div>
+          <div class="info__item">
+            <img class="info__item-icon" src="images/icons/return.png" alt="return icon">
+            <h5 class="info__item-title">
+              30 Days Easy Return
+            </h5>
+            <p class="info__item-text">
+              Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+            </p>
+          </div>
+          <div class="info__item">
+            <img class="info__item-icon" src="images/icons/support.png" alt="support icon">
+            <h5 class="info__item-title">
+              24/7 Customer Support
+            </h5>
+            <p class="info__item-text">
+              Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+            </p>
+          </div> 
+        </div>
+
+        <div class="categories">
+          <h2 class="title">
+            TOP CATEGORIES
+          </h2>
+          <div class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo tempor ut labore et dolore aliqua.
+          </div>
+          <div class="categories__items">
+            <div class="categories__item" style="background-image: url('images/content/categories-1.jpg');">
+              <div class="categories__item-subtitle">
+                Up To 40% Off
+              </div>
+              <h4 class="categories__item-title">
+                Shoes & Jewellry
+              </h4>
+              <a class="categories__link" href="#">
+                EXPLORE MORE
+              </a>
+            </div>
+            <div class="categories__item" style="background-image: url('images/content/categories-2.jpg');">
+              <div class="categories__item-subtitle">
+                New Arrival
+              </div>
+              <h4 class="categories__item-title">
+                Clothes & Accessories
+              </h4>
+              <a class="categories__link" href="#">
+                EXPLORE MORE
+              </a>
+            </div>
+            <div class="categories__item" style="background-image: url('images/content/categories-3.jpg');">
+              <div class="categories__item-subtitle">
+                Trending Now
+              </div>
+              <h4 class="categories__item-title">
+                Men’s Fashion
+              </h4>
+              <a class="categories__link" href="#">
+                EXPLORE MORE
+              </a>
+            </div>
+            <div class="categories__item" style="background-image: url('images/content/categories-4.jpg');">
+              <div class="categories__item-subtitle">
+                Hot Collection
+              </div>
+              <h4 class="categories__item-title">
+                Girl’s Fashion
+              </h4>
+              <a class="categories__link" href="#">
+                EXPLORE MORE
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
   
   <footer class="footer">
@@ -247,7 +336,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
           </p>
           <form class="footer-top__form" action="#">
-            <input class="footer-top__form-input" type="email" required placeholder="Your email address">
+            <input class="footer-top__form-input" type="email" required placeholder="Your email adress">
             <button class="footer-top__form-btn" type="submit">Subscribe</button>
           </form>
         </div>
