--- a/app/404-page.html
+++ b/app/404-page.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sorry! 404 Error</title>
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header--404-page">
       <div class="container">
         <div class="header__inner">
           <a class="logo" href="#">
@@ -48,7 +48,7 @@
                 src="images/icons/num_2.png"
                 alt="user btn"
             /></a>
-            <a class="user-nav__link" href="#">
+            <a class="user-nav__link user-nav__link--404-page" href="#">
               <img
                 class="usernav__link-img"
                 src="images/icons/num_3.png"
@@ -56,7 +56,7 @@
               />
               <span class="user-nav__num">3</span>
             </a>
-            <a class="user-nav__link" href="#">
+            <a class="user-nav__link user-nav__link--404-page" href="#">
               <img
                 class="usernav__link-img"
                 src="images/icons/num_4.png"
@@ -70,23 +70,19 @@
     </header>
 
     <main class="main">
-      <section class="top">
-        <div
-          class="top__container"
-          style="background-image: url('images/top-bg.jpg')"
-        >
-          <div class="container">
-            <h2 class="top__title title">LOG IN</h2>
-            <div class="breadcrumbs">
-              <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#"> Home </a>
-                </li>
-                <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#"> Log in </a>
-                </li>
-              </ul>
+      <section class="page-404">
+        <div class="container">
+          <div class="page-404__inner">
+            <div class="page-404__content">
+              <h2 class="page-404__title">OPPS! Page Not Found!!</h2>
+              <p class="page-404__text">
+                We,re sorry but we can’t seem to find the pages you request.
+                This might be because you have typed the web address not find
+                incorrectly.
+              </p>
+              <a class="page-404__link" href="#"> BACK TO HOME </a>
             </div>
+            <img class="page-404__img" src="images/404.png" alt="Error image" />
           </div>
         </div>
       </section>
