--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,10 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+              <a class="menu__list-link menu__list-link--active" href="index.html">HOME</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">SHOP</a>
+              <a class="menu__list-link" href="shop.html">SHOP</a>
             </li>
             <li class="menu__list-item">
               <a class="menu__list-link" href="#">PAGE</a>
@@ -35,7 +35,7 @@
           </ul>
         </nav>
         <div class="user-nav">
-          <a class="user-nav__link" href="#"><img class="usernav__link-img" src="images/icons/num_1.png" alt="user btn"></a>
+          <a class="user-nav__link" href="login.html"><img class="usernav__link-img" src="images/icons/num_1.png" alt="user btn"></a>
           <a class="user-nav__link" href="#"><img class="usernav__link-img" src="images/icons/num_2.png" alt="user btn"></a>
           <a class="user-nav__link" href="#">
             <img class="usernav__link-img" src="images/icons/num_3.png" alt="user btn">
@@ -420,7 +420,7 @@
               White Polo Men’s T-Shirt
             </h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
+              <div class="product-item__new-price">$24.00</div>
               <div class="product-item__old-price">$27.00</div>
             </div>
           </div>
