--- a/app/shop.html
+++ b/app/shop.html
@@ -17,12 +17,14 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#"
+                <a
+                  class="menu__list-link menu__list-link--active"
+                  href="index.html"
                   >HOME</a
                 >
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">SHOP</a>
+                <a class="menu__list-link" href="shop.html">SHOP</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#">PAGE</a>
@@ -36,7 +38,7 @@
             </ul>
           </nav>
           <div class="user-nav">
-            <a class="user-nav__link" href="#"
+            <a class="user-nav__link" href="login.html"
               ><img
                 class="usernav__link-img"
                 src="images/icons/num_1.png"
