Added Blog page

--- a/app/shop.html
+++ b/app/shop.html
@@ -381,7 +381,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -435,7 +435,7 @@
                           ></path>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -484,7 +484,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -591,7 +591,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -649,7 +649,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -698,7 +698,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -756,7 +756,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -805,7 +805,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -863,7 +863,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -912,7 +912,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -970,7 +970,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1019,7 +1019,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1077,7 +1077,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1126,7 +1126,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1184,7 +1184,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1233,7 +1233,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1291,7 +1291,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1340,7 +1340,7 @@
                       alt="product"
                     />
                     <div class="product-item__link-box">
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
@@ -1398,7 +1398,7 @@
                           </g>
                         </svg>
                       </a>
-                      <a class="product-item__link" href="#">
+                      <a class="product-item__link" href="product.html">
                         <svg
                           width="24px"
                           height="24px"
