--- a/app/index.html
+++ b/app/index.html
@@ -259,7 +259,7 @@
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/1.jpg" alt="product">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="product.html">
                   <svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" transform="rotate(0)">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(12,12), scale(0)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M20 20L15.8033 15.8033M18 10.5C18 6.35786 14.6421 3 10.5 3C6.35786 3 3 6.35786 3 10.5C3 14.6421 6.35786 18 10.5 18C14.6421 18 18 14.6421 18 10.5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g>
                   </svg>
@@ -293,7 +293,7 @@
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/2.jpg" alt="product">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="product.html">
                   <svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" transform="rotate(0)">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(12,12), scale(0)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M20 20L15.8033 15.8033M18 10.5C18 6.35786 14.6421 3 10.5 3C6.35786 3 3 6.35786 3 10.5C3 14.6421 6.35786 18 10.5 18C14.6421 18 18 14.6421 18 10.5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g>
                   </svg>
@@ -327,7 +327,7 @@
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/3.jpg" alt="product">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="product.html">
                   <svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" transform="rotate(0)">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(12,12), scale(0)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M20 20L15.8033 15.8033M18 10.5C18 6.35786 14.6421 3 10.5 3C6.35786 3 3 6.35786 3 10.5C3 14.6421 6.35786 18 10.5 18C14.6421 18 18 14.6421 18 10.5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g>
                   </svg>
@@ -361,7 +361,7 @@
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/4.jpg" alt="product">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="product.html">
                   <svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" transform="rotate(0)">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(12,12), scale(0)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M20 20L15.8033 15.8033M18 10.5C18 6.35786 14.6421 3 10.5 3C6.35786 3 3 6.35786 3 10.5C3 14.6421 6.35786 18 10.5 18C14.6421 18 18 14.6421 18 10.5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g>
                   </svg>
@@ -395,7 +395,7 @@
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/5.jpg" alt="product">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="product.html">
                   <svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" transform="rotate(0)">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(12,12), scale(0)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M20 20L15.8033 15.8033M18 10.5C18 6.35786 14.6421 3 10.5 3C6.35786 3 3 6.35786 3 10.5C3 14.6421 6.35786 18 10.5 18C14.6421 18 18 14.6421 18 10.5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g>
                   </svg>
@@ -429,7 +429,7 @@
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/6.jpg" alt="product">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="product.html">
                   <svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" transform="rotate(0)">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(12,12), scale(0)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M20 20L15.8033 15.8033M18 10.5C18 6.35786 14.6421 3 10.5 3C6.35786 3 3 6.35786 3 10.5C3 14.6421 6.35786 18 10.5 18C14.6421 18 18 14.6421 18 10.5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g>
                   </svg>
