Added Blog-post page

--- a/app/product.html
+++ b/app/product.html
@@ -30,7 +30,7 @@
                 <a class="menu__list-link" href="#">PAGE</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">BLOG</a>
+                <a class="menu__list-link" href="blog.html">BLOG</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#">CONTACT</a>
@@ -393,30 +393,32 @@
                 id="tab-3"
               >
                 <div class="comments">
-                  <img
-                    class="comments__img"
-                    src="images/avatar/1.jpg"
-                    alt="avatar"
-                  />
-                  <div class="comments__content">
-                    <div class="comments__content-top">
-                      <p class="comments__content-name">Michle Jhon</p>
-                      <p class="comments__content-date">2 days ago</p>
-                      <div
-                        class="star comments__content-star"
-                        data-rateyo-rating="4"
-                      ></div>
+                  <div class="comments__item">
+                    <img
+                      class="comments__img"
+                      src="images/avatar/1.jpg"
+                      alt="avatar"
+                    />
+                    <div class="comments__content">
+                      <div class="comments__content-top">
+                        <p class="comments__content-name">Michle Jhon</p>
+                        <p class="comments__content-date">2 days ago</p>
+                        <div
+                          class="star comments__content-star"
+                          data-rateyo-rating="4"
+                        ></div>
+                      </div>
+                      <p class="comments__content-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Qus ipsum speissei ultrices gravida. Risus
+                        commodo viverra maeenas accumsan lacus vel facilisis.
+                      </p>
+                      <a class="comments__content-reply" href="#">Reply</a>
                     </div>
-                    <p class="comments__content-text">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Qus ipsum speissei ultrices gravida. Risus commodo
-                      viverra maeenas accumsan lacus vel facilisis.
-                    </p>
-                    <a class="comments__content-reply" href="#">Reply</a>
                   </div>
 
-                  <div class="comments">
+                  <div class="comments__item">
                     <img
                       class="comments__img"
                       src="images/avatar/2.jpg"
@@ -441,7 +443,7 @@
                     </div>
                   </div>
 
-                  <div class="comments">
+                  <div class="comments__item">
                     <img
                       class="comments__img"
                       src="images/avatar/1.jpg"
