--- a/app/404-page.html
+++ b/app/404-page.html
@@ -28,7 +28,7 @@
                 <a class="menu__list-link" href="#">PAGE</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">BLOG</a>
+                <a class="menu__list-link" href="blog.html">BLOG</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#">CONTACT</a>
