--- a/app/404-page.html
+++ b/app/404-page.html
@@ -11,7 +11,7 @@
     <header class="header header--404-page">
       <div class="container">
         <div class="header__inner">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img src="images/logo.png" alt="logo" class="logo__img" />
           </a>
           <nav class="menu">
@@ -67,12 +67,15 @@
               <span class="user-nav__num">7</span>
             </a>
           </div>
+          <button class="menu__list-btn">
+            <span class="menu__list-btn-item"></span>
+          </button>
         </div>
       </div>
     </header>
 
     <main class="main">
-      <section class="page-404">
+      <!-- <section class="page-404">
         <div class="container">
           <div class="page-404__inner">
             <div class="page-404__content">
@@ -87,7 +90,7 @@
             <img class="page-404__img" src="images/404.png" alt="Error image" />
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <footer class="footer">
