--- a/app/blog.html
+++ b/app/blog.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img src="images/logo.png" alt="logo" class="logo__img" />
           </a>
           <nav class="menu">
@@ -67,6 +67,9 @@
               <span class="user-nav__num">7</span>
             </a>
           </div>
+          <button class="menu__list-btn">
+            <span class="menu__list-btn-item"></span>
+          </button>
         </div>
       </div>
     </header>
