--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="header__inner">
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
           <img src="images/logo.png" alt="logo" class="logo__img">
         </a>
         <nav class="menu">
@@ -46,6 +46,9 @@
             <span class="user-nav__num">7</span>
           </a>
         </div>
+        <button class="menu__list-btn">
+            <span class="menu__list-btn-item"></span>
+          </button>
       </div>
     </div>
   </header>
