Added Footer adaptive

--- a/app/blog.html
+++ b/app/blog.html
@@ -630,9 +630,9 @@
               </li>
             </ul>
           </div>
-          <div class="footer-top__item footer-top__nav">
+          <div class="footer-top__item footer-top__item--links-slide">
             <h6 class="footer-top__title">Useful Links</h6>
-            <ul class="footer-top__list">
+            <ul class="footer-top__list footer-top__list--links-slide">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#">About Us</a>
               </li>
@@ -650,9 +650,9 @@
               </li>
             </ul>
           </div>
-          <div class="footer-top__item">
+          <div class="footer-top__item footer-top__item--user-slide">
             <h6 class="footer-top__title">My Account</h6>
-            <ul class="footer-top__list">
+            <ul class="footer-top__list footer-top__list--user-slide">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#">My Account</a>
               </li>
