Added Footer and Top-Slider adaptive

--- a/app/404-page.html
+++ b/app/404-page.html
@@ -75,7 +75,7 @@
     </header>
 
     <main class="main">
-      <!-- <section class="page-404">
+      <section class="page-404">
         <div class="container">
           <div class="page-404__inner">
             <div class="page-404__content">
@@ -85,12 +85,12 @@
                 This might be because you have typed the web address not find
                 incorrectly.
               </p>
-              <a class="page-404__link" href="#"> BACK TO HOME </a>
+              <a class="page-404__link" href="index.html"> BACK TO HOME </a>
             </div>
             <img class="page-404__img" src="images/404.png" alt="Error image" />
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <footer class="footer">
