--- a/app/index.html
+++ b/app/index.html
@@ -1,140 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MARCHO</title>
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
-<body>
-
-  <header class="header">
-    <div class="container">
-      <div class="header__inner">
-        <a class="logo" href="index.html">
-          <img src="images/logo.png" alt="logo" class="logo__img">
-        </a>
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__list-item">
-              <a class="menu__list-link menu__list-link--active" href="index.html">HOME</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="shop.html">SHOP</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">PAGE</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="blog.html">BLOG</a>
-            </li>
-            <li class="menu__list-item ">
-              <a class="menu__list-link" href="contacts.html">CONTACT</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-nav">
-          <a class="user-nav__link" href="login.html"><img class="usernav__link-img" src="images/icons/num_1.png" alt="user btn"></a>
-          <a class="user-nav__link" href="#"><img class="usernav__link-img" src="images/icons/num_2.png" alt="user btn"></a>
-          <a class="user-nav__link" href="#">
-            <img class="usernav__link-img" src="images/icons/num_3.png" alt="user btn">
-            <span class="user-nav__num">3</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MARCHO</title>
+    <link rel="stylesheet" href="css/style.min.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a class="logo" href="index.html">
+            <img src="images/logo.png" alt="logo" class="logo__img" />
           </a>
-          <a class="user-nav__link" href="#">
-            <img class="usernav__link-img" src="images/icons/num_4.png" alt="user btn">
-            <span class="user-nav__num">7</span>
-          </a>
-        </div>
-        <button class="menu__list-btn">
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a
+                  class="menu__list-link menu__list-link--active"
+                  href="index.html"
+                  >HOME</a
+                >
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="shop.html">SHOP</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">PAGE</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="blog.html">BLOG</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="contacts.html">CONTACT</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="user-nav">
+            <a class="user-nav__link" href="login.html"
+              ><img
+                class="usernav__link-img"
+                src="images/icons/num_1.png"
+                alt="user btn"
+            /></a>
+            <a class="user-nav__link" href="#"
+              ><img
+                class="usernav__link-img"
+                src="images/icons/num_2.png"
+                alt="user btn"
+            /></a>
+            <a class="user-nav__link" href="#">
+              <img
+                class="usernav__link-img"
+                src="images/icons/num_3.png"
+                alt="user btn"
+              />
+              <span class="user-nav__num">3</span>
+            </a>
+            <a class="user-nav__link" href="#">
+              <img
+                class="usernav__link-img"
+                src="images/icons/num_4.png"
+                alt="user btn"
+              />
+              <span class="user-nav__num">7</span>
+            </a>
+          </div>
+          <button class="menu__list-btn">
             <span class="menu__list-btn-item"></span>
           </button>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-
-    <section class="top-slider">
-      <div class="container top-slider__container">
-        <div class="top-slider__inner">
-          <div class="top-slider__item">
-            <div class="top-slider__content">
-              <h3 class="top-slider__title">
-                New Season <br>
-                New Brand Collection
-              </h3>
-              <p class="top-slider__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                et dolore magna aliqua. Ipsum.
-              </p>
-              <a class="top-slider__link" href="#">
-                BUY NOW
-              </a>
+    <main class="main">
+      <section class="top-slider">
+        <div class="container top-slider__container">
+          <div class="top-slider__inner">
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">
+                  New Season <br />
+                  New Brand Collection
+                </h3>
+                <p class="top-slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top-slider__link" href="#"> BUY NOW </a>
+              </div>
+              <div class="top-slider__img">
+                <img
+                  class="top-slider__img-item"
+                  src="images/slider/photo-1.png"
+                  alt="slide images"
+                />
+              </div>
             </div>
-            <div class="top-slider__img">
-              <img class="top-slider__img-item" src="images/slider/photo-1.png" alt="slide images">
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">
+                  New Season <br />
+                  New Brand Collection
+                </h3>
+                <p class="top-slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top-slider__link" href="#"> BUY NOW </a>
+              </div>
+              <div class="top-slider__img">
+                <img
+                  class="top-slider__img-item"
+                  src="images/slider/photo-1.png"
+                  alt="slide images"
+                />
+              </div>
             </div>
-          </div>
-          <div class="top-slider__item">
-            <div class="top-slider__content">
-              <h3 class="top-slider__title">
-                New Season <br>
-                New Brand Collection
-              </h3>
-              <p class="top-slider__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                et dolore magna aliqua. Ipsum.
-              </p>
-              <a class="top-slider__link" href="#">
-                BUY NOW
-              </a>
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">
+                  New Season <br />
+                  New Brand Collection
+                </h3>
+                <p class="top-slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top-slider__link" href="#"> BUY NOW </a>
+              </div>
+              <div class="top-slider__img">
+                <img
+                  class="top-slider__img-item"
+                  src="images/slider/photo-1.png"
+                  alt="slide images"
+                />
+              </div>
             </div>
-            <div class="top-slider__img">
-              <img class="top-slider__img-item" src="images/slider/photo-1.png" alt="slide images">
-            </div>
-          </div>
-          <div class="top-slider__item">
-            <div class="top-slider__content">
-              <h3 class="top-slider__title">
-                New Season <br>
-                New Brand Collection
-              </h3>
-              <p class="top-slider__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                et dolore magna aliqua. Ipsum.
-              </p>
-              <a class="top-slider__link" href="#">
-                BUY NOW
-              </a>
-            </div>
-            <div class="top-slider__img">
-              <img class="top-slider__img-item" src="images/slider/photo-1.png" alt="slide images">
-            </div>
-          </div>
-          <div class="top-slider__item">
-            <div class="top-slider__content">
-              <h3 class="top-slider__title">
-                New Season <br>
-                New Brand Collection
-              </h3>
-              <p class="top-slider__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                et dolore magna aliqua. Ipsum.
-              </p>
-              <a class="top-slider__link" href="#">
-                BUY NOW
-              </a>
-            </div>
-            <div class="top-slider__img">
-              <img class="top-slider__img-item" src="images/slider/photo-1.png" alt="slide images">
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">
+                  New Season <br />
+                  New Brand Collection
+                </h3>
+                <p class="top-slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top-slider__link" href="#"> BUY NOW </a>
+              </div>
+              <div class="top-slider__img">
+                <img
+                  class="top-slider__img-item"
+                  src="images/slider/photo-1.png"
+                  alt="slide images"
+                />
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="categories-info">
+      <!-- <section class="categories-info">
       <div class="container">
         <div class="info">
           <div class="info__item">
@@ -221,9 +249,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="video-fashion">
+      <!-- <section class="video-fashion">
       <div class="container">
         <div class="video-fashion__inner">
             <div class="video-fashion__popup" style="background-image: url('images/fashion-image.jpg');">
@@ -247,9 +275,9 @@
             </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="product">
+      <!-- <section class="product">
       <div class="container">
         <h3 class="title">
           TRENDING PRODUCTS
@@ -466,9 +494,9 @@
           LOAD MORE
         </a>
       </div>
-    </section>
+    </section> -->
 
-    <div class="promo">
+      <!-- <div class="promo">
       <div class="container">
         <div class="promo__inner">
           <p class="promo__subtitle">
@@ -512,9 +540,9 @@
           <li class="partners__item"><img src="images/partners/6.png" alt="partners logo"></li>
         </ul>
       </div>
-    </div>
+    </div> -->
 
-    <section class="blog">
+      <!-- <section class="blog">
       <div class="container">
         <h3 class="title">
           From Our Blog
@@ -582,11 +610,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+    </main>
 
-  </main>
-  
-  <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-top">
           <div class="footer-top__item footer-top__contact">
@@ -811,7 +838,6 @@
       </div>
     </footer>
 
-
-  <script src="js/main.min.js"></script>
-</body>
+    <script src="js/main.min.js"></script>
+  </body>
 </html>
